test/parser/chp/001.stderr
At: "001.hac":3:
parse error: syntax error
parser stacks:
state	value
#STATE#	(null) 
#STATE#	(null) 
#STATE#	keyword: defproc [3:1..7]
#STATE#	identifier: empty [3:9..13]
#STATE#	( [3:14]
#STATE#	(chan-type) [3:15..19]
#STATE#	( [3:20]
#STATE#	keyword: chan [3:21..24]
in state #STATE#, possible rules are:
	data_type_ref_list_optional_in_parens : '(' . data_type_ref_list_optional ')'  (#RULE#)
	data_type_ref_list_optional : .  (#RULE#)
acceptable tokens are: 
	')' (reduce)
	ID (shift)
	SCOPE (shift)
	INT_TYPE (shift)
	BOOL_TYPE (shift)
