test/parser/chp/001.hac
// "001.hac" should fail, channel should not contain channel

defproc empty(chan?(chan(bool)) L; chan!(bool) R);

